2010-06-11  Steve Block  <steveblock@google.com>

Reviewed by Alexey Proskuryakov.

        Client-based Geolocation does not handle multiple simultaneous requests
        https://bugs.webkit.org/show_bug.cgi?id=40148

        Test: fast/dom/Geolocation/multiple-requests.html

        The Geolocation must handle multiple calls to addObserver() from the same Geolocation object.

        * page/GeolocationController.cpp:
        (WebCore::GeolocationController::addObserver):
2010-06-11  Steve Block  <steveblock@google.com>

        Reviewed by Alexey Proskuryakov.

        Client-based Geolocation does not handle multiple simultaneous requests
        https://bugs.webkit.org/show_bug.cgi?id=40148

        The change to the GeolocationController is explicitly tested with multiple-requests.html.

        This change also fixes reentrant-error.html and reentrant-success.html which were previously
        on the mac skipped list. reentrant-error.html required a minor tweak as the mac
        GeolocationController can only provide an error code of 2 (POSITION_UNAVAILABLE).

        Added to GTK skipped list.

        * fast/dom/Geolocation/multiple-requests-expected.txt: Added.
        * fast/dom/Geolocation/multiple-requests.html: Added.
        * fast/dom/Geolocation/script-tests/multiple-requests.js: Added.
        * fast/dom/Geolocation/script-tests/reentrant-error.js:
        * platform/mac/Skipped:
        * platform/gtk/Skipped:


Canonical link: https://commits.webkit.org/52013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60998 268f45cc-cd09-0410-ab3c-d52691b4dbfc